fix broken layout when js is disabled again. close #125

--- a/themes/lazy/assets/css/_media-objects.scss
+++ b/themes/lazy/assets/css/_media-objects.scss
@@ -104,3 +104,9 @@
 .media-caption {
   text-align: center;
 }
+
+.no-js .lazy-wrapper.ratio {
+  padding-top: 0;
+  height: auto;
+  position: static;
+}
